[package]
name = "discorec"
version = "0.1.2"
description = "Recommendations for Rust using collaborative filtering"
repository = "https://github.com/ankane/disco-rust"
license = "MIT"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
