[package]
name = "discorec"
version = "0.2.1"
description = "Recommendations for Rust using collaborative filtering"
repository = "https://github.com/ankane/disco-rust"
license = "MIT"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.56.0"
readme = "README.md"

[lib]
doctest = false

[dependencies]
